width bugfix on mobile

--- a/public/css/bubble.css
+++ b/public/css/bubble.css
@@ -632,7 +632,7 @@ div#maincontent {
 }
 
 #content {
-    width: 1200px;
+    width: 100%;
 }
 
 #chart {
